--- a/DOM/date.html
+++ b/DOM/date.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h2 id="demo"></h2>
-
+    <h2>hi</h2>
+    <h1>
    <script> 
-   document.getElementById("demo").innerHTML= "Date: " + Date.now();
+   document.getElementById("demo").innerHTML= "Date: " + Date();
+   document.write(Date());
    </script>
+   </h1>
 </body>
 </html>
