events added to DOM

--- a/DOM/nodesSibling.html
+++ b/DOM/nodesSibling.html
@@ -27,8 +27,8 @@
 
 
          //childnode
-        //console.log (ul.children[1])
-        //console.log(ul.previousElementSibling)
+        console.log (ul.children[1]);
+        console.log(ul.previousElementSibling);
         </script>
 
     
